--- a/docs/_data/carousel.yml
+++ b/docs/_data/carousel.yml
@@ -1,8 +1,8 @@
 interval: 6000
 items:
-  - src: /assets/user/zahnarzt-sedlmaier-roentgenraum.png
+  - src: assets/user/slide1.jpg
     alt: Röntgenraum
     caption: "Röntgenraum"
-  - src: /assets/user/zahnarzt-sedlmaier-empfang.png
+  - src: assets/user/slide2.jpg
     alt: Empfang
-  - src: /assets/user/zahnarzt-sedlmaier-prohylaxeraum.png
+  - src: assets/user/slide3.jpg
