--- a/docs/_data/translations.yml
+++ b/docs/_data/translations.yml
@@ -1,6 +1,6 @@
 '§über uns im footer':
   _hint: 'Text im Footer (über uns)'
-  de: 'Bereits seit 2012 sind wir für Sie in der Münchener Altstadt vor Ort, direkt am Karlsplatz (Stachus).'
+  de: 'Dies ist eine Demo Praxis-Website von leuffen.de'
 '§Anfahrtbeschreibung U-Bahn':
   _hint: 'Geben Sie hier bitte die komplette Anfahrtbeschreibung ein (auch auf Deutsch)'
   de: 'Bitte Anfahrtsbeschreibung per U-Bahn hier einfügen'
