--- a/docs/_data/general.yml
+++ b/docs/_data/general.yml
@@ -1,5 +1,5 @@
-pagebuilder: https://pagebuilder.leuffen.de/e/demo-kingsquest/default
-subscription_id: leuffen-demo
+pagebuilder: https://pagebuilder.leuffen.de/e/leuffen/kingsquest
+subscription_id: leuffen
 
 title: Zahnarztpraxis Kingsquest
 name: Zahnarztpraxis Kingsquest
